--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "sendmail": "^1.6.1"
   }
 }
