--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
     "nodemailer": "^6.6.3",
-    "sendmail": "^1.6.1"
+    //"sendmail": "^1.6.1"
   }
 }
