--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "body-parser": "^1.19.0",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
-    "busca-cep": "^0.5.0"
+    "nodemailer": "^6.6.3",
+    "postfix": "0.0.1",
+    "sendmail": "^1.6.1"
+  },
+  "devDependencies": {
+    "@types/dialogflow-fulfillment": "^0.6.1",
+    "@types/nodemailer": "^6.4.4",
+    "@types/sendmail": "^1.4.4"
   }
 }
